@@ -24,6 +24,7 @@ V1.9.1 development snapshot
 ! Reduced memory footprint for comparison and output by roughly 95%
 ! Updated Italian and German translation
 * Internal rework of comparison and output logic
+* Allow multi line output for each difference
 * Fixed some VS6 compilation issues
 
 V1.9.0 2013-02-02
